# video-scissors

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  pyproject.toml
.dex/: tasks.jsonl
benchmarks/: prores_crop_benchmark.py  prores_cut_benchmark.py
benchmarks/skip_playback_poc/: main.py
docs/: architecture.md  project-principles.md  vision.md
src/video_scissors/: __init__.py  app.py  bootstrap.py  bridge.py  commands.py  document.py  edit_service.py  export_service.py  models.py  proxy_service.py  services.py  session.py  testing_qt.py  thumbnails.py  timeline.py
src/video_scissors/qml/: CropOverlay.qml  CutBar.qml  Main.qml  Scrubber.qml  Timeline.qml  TransportControls.qml  VideoArea.qml
tests/: conftest.py  test_bootstrap.py  test_bridge.py  test_commands.py  test_document.py  test_edit_service.py  test_export_service.py  test_gui.py  test_media_fixtures.py  test_proxy_service.py  test_services.py  test_session.py  test_session_api.py  test_testing_qt.py  test_thumbnails.py  test_timeline.py
