[project]
name = "video-scissors"
version = "0.1.0"
description = "Fast, focused video editor for quick edits"
readme = "README.md"
requires-python = ">=3.12.1"
dependencies = [
    "pyside6>=6.10.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/video_scissors"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[project.scripts]
video-scissors = "video_scissors.app:main"

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-qt>=4.5.0",
]
