[project]
name = "video-scissors"
version = "0.1.0"
description = "Fast, focused video editor for quick edits"
readme = "README.md"
requires-python = ">=3.12.1"
dependencies = [
    "pyside6>=6.10.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/video_scissors"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[project.scripts]
video-scissors = "video_scissors.app:main"

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-qt>=4.5.0",
    "ruff>=0.15.5",
    "ty>=0.0.21",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PLC0415"]

[tool.ty.environment]
root = ["src", "tests"]

[tool.ty.rules]
# PySide6 stubs are incomplete, downgrade some errors
unresolved-attribute = "warn"
# PySide6 Property returns str at runtime but typed as Property
unsupported-operator = "warn"
